--- a/SEO/index.css
+++ b/SEO/index.css
@@ -1,20 +1,9 @@
-*
+/* *
 {
     margin: 0;
     padding: 0;
 }
-.nav{
-    height:75px ;
-    /* border: 1px solid red; */
-    box-shadow: 3px 3px 3px 3px  rgb(207, 197, 197);
-    display: flex;
-    padding: 0px 2%;
-    align-items: center ;
-    justify-content: space-between;
-    background-color:#003d63;
-    color: white;
 
-}
 .nav>div{
 
     display: flex;
@@ -26,21 +15,34 @@
 
 
 }
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 75px;
+    box-shadow: 3px 3px 3px 3px rgb(207, 197, 197);
+    display: flex;
+    padding: 0px 2%;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #003d63;
+    color: white;
+}
+
 .main{
     height: 300px;
-    /* border: 2px solid red; */
+  
 }
 .main>div>h1{
     text-align: center;
     align-items: center;
     margin-top: 90px;
-    /* padding: 0px 10%; */
-    /* border: 2px solid black; */
-    /* height: 150px; */
+   
     font-size: 45px;
 }
 .main>div:nth-child(2){
-    /* border: 3px solid forestgreen; */
+
     text-align: center;
     margin-top: 50px;
     font-size: 18px;
@@ -48,33 +50,28 @@
 
 .container{
     height: 400px;
-    /* width: 95%; */
-    /* padding:2px; */
+   
     display: grid;
     grid-template-columns: repeat(4,.100px);
-    /* grid-column-gap :20px; */
+
     gap: 20px;
     box-sizing: border-box;
     column-gap: 2vw;
 
-    /* padding-left: 20px;
-    padding-right: 20px; */
     display: flex;
  
     text-align: center;
-    /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset; */
     border-radius:20px;
-    /* border: 2px solid red; */
-    /* justify-content: space-between; */
+   
    
 }
 .cards{
-    background-color: rgb(60, 228, 205);
+    background-color: rgb(22, 209, 248);
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 
 }
 .container>div{
-    /* border: 2px solid green; */
+ 
     padding-top: 70px;
     border-bottom-left-radius: 20%;
     border-top-left-radius: 25%;
@@ -84,18 +81,16 @@
 }
 .container>div>p:nth-child(2){
 
-    /* padding-top: 35px; */
+ 
     text-align: center;
     padding: 15%;
     letter-spacing: .100px;
     line-height: 22px;
     font-family: Georgia, "Times New Roman", Times, serif;
 }
-/* #container{
-    background-color: rgb(40, 151, 224)
-} */
+
 .card{
-    background-color: rgb(27, 106, 170);
+    background-color: #209df4;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 
 
@@ -106,8 +101,194 @@
     background-color: rgb(0,61,99);
     text-align: center;
     justify-content: center;
-    /* align-items: center; */
+
+    padding-top: 30px;
+    color: white;
+    font-size: 20px;
+} */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.nav > div {
+    display: flex;
+}
+
+.nav > div:nth-child(2) {
+    justify-content: space-evenly;
+    width: 40%;
+}
+
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 75px;
+    box-shadow: 3px 3px 3px 3px rgb(207, 197, 197);
+    display: flex;
+    padding: 0px 2%;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #003d63;
+    color: white;
+}
+#point{
+    cursor: pointer;
+}
+
+.main {
+    height: 300px;
+}
+
+.main > div > h1 {
+    text-align: center;
+    align-items: center;
+    margin-top: 90px;
+    font-size: 45px;
+}
+
+.main > div:nth-child(2) {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 18px;
+}
+
+.container {
+    /* height: 400px; */
+    width: 95%;
+
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(100px, 1fr));
+    gap: 20px;
+    box-sizing: border-box;
+    column-gap: 2vw;
+    display: flex;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.cards {
+    background-color: rgb(22, 209, 248);
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.container > div {
+
+    width: 23%;
+    padding-top: 70px;
+    /* border-bottom-left-radius: 20%; */
+    border-top-left-radius: 25%;
+    border-bottom-right-radius: 25%;
+    border-top-right-radius: 6px;
+}
+
+.container > div > p:nth-child(2) {
+    text-align: center;
+    padding: 15%;
+    letter-spacing: 0.100px;
+    line-height: 22px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+}
+.card > button {
+    background-color: #003d63;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.card>p{
+    width: fit-content;
+    height: 150px;
+}
+
+.card {
+    background-color: #209df4;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.footer {
+    margin-top: 40px;
+    height: 60px;
+    background-color: rgb(0, 61, 99);
+    text-align: center;
+    justify-content: center;
     padding-top: 30px;
     color: white;
     font-size: 20px;
 }
+
+/* Media Queries */
+
+/* Mobile Devices */
+@media only screen and (max-width: 480px) {
+    .nav > div:nth-child(2) {
+        display: none;
+    }
+
+    .nav {
+        padding: 0 10px;
+    }
+
+    .main > div > h1 {
+        margin-top: 30px;
+        font-size: 30px;
+    }
+
+    .main > div:nth-child(2) {
+        margin-top: 20px;
+        font-size: 14px;
+    }
+
+    .container {
+        flex-direction: column;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .container > div {
+        padding-top: 30px;
+        border-radius: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+/* Tablets */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .nav > div:nth-child(2) {
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .main > div > h1 {
+        margin-top: 60px;
+        font-size: 35px;
+    }
+
+    .main > div:nth-child(2) {
+        margin-top: 30px;
+        font-size: 16px;
+    }
+}
+
+/* Desktops and Larger Screens */
+@media only screen and (min-width: 769px) {
+    .main > div > h1 {
+        margin-top: 90px;
+        font-size: 45px;
+    }
+
+    .main > div:nth-child(2) {
+        margin-top: 50px;
+        font-size: 18px;
+    }
+}
+
+
