--- a/SEO/index.css
+++ b/SEO/index.css
@@ -37,13 +37,16 @@
     list-style: none;
   }
   
+  #point{
+    cursor:pointer;
+  }
 
   
   /* Styles for screens up to 768px wide */
   @media (max-width: 768px) {
-    .nav > .menu-toggle {
-      display:block /* Show the hamburger menu toggle button */
-    }
+    /* .nav > .menu-toggle {
+      display:block 
+    } */
   
     .nav > div {
       display: none; /* Hide the regular navigation */
@@ -75,7 +78,7 @@
   }
   
   /* Hamburger Menu Icon */
-  .menu-toggle {
+  /* .menu-toggle {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -83,13 +86,13 @@
     height: 21px;
     cursor: pointer;
   }
-  
-  .menu-toggle div {
+   */
+  /* .menu-toggle div {
     width: 100%;
     height: 3px;
     background-color: white;
   }
-  
+   */
   body {
     background-image: url("images\ \(1\).jpg");
     /* background-color: #cccccc; */
