--- a/SEO/index.css
+++ b/SEO/index.css
@@ -5,94 +5,19 @@
     box-sizing: border-box;
   }
   
-  .nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 75px;
-    background-color: #003d63;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 2%;
-    box-shadow: 3px 3px 3px 3px rgb(207, 197, 197);
-    z-index: 999;
-  }
-  
-
-  
-  .nav > div {
-    display: flex;
-  }
-  
-  .nav > div:nth-child(2) {
-    justify-content: space-evenly;
-    width: 40%;
-  }
   
   .nav ul {
     display: flex;
     list-style: none;
   }
-  
+   */
   #point{
     cursor:pointer;
   }
 
   
-  /* Styles for screens up to 768px wide */
-  @media (max-width: 768px) {
-    /* .nav > .menu-toggle {
-      display:block 
-    } */
+ 
   
-    .nav > div {
-      display: none; /* Hide the regular navigation */
-    }
-  
-    .nav ul {
-      flex-direction: column;
-      position: absolute;
-      top: 75px;
-      left: 0;
-      width: 100%;
-      background-color: #003d63;
-      padding: 10px 0;
-      display: none;
-    }
-  
-    .nav ul.expand {
-      display: flex;
-      justify-content: space-evenly;
-    }
-
-    .nav .active {
-      color: red;
-    }
-  
-    .container > div {
-      width: 100%;
-    }
-  }
-  
-  /* Hamburger Menu Icon */
-  /* .menu-toggle {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
-    cursor: pointer;
-  }
-   */
-  /* .menu-toggle div {
-    width: 100%;
-    height: 3px;
-    background-color: white;
-  }
-   */
   body {
     background-image: url("images\ \(1\).jpg");
     /* background-color: #cccccc; */
@@ -329,10 +254,10 @@
   }
 }
 
-.nav {
-  /* ...existing styles... */
+/* .nav {
+  
   animation: slideIn 0.5s forwards;
-}
+} */
 
 /* Animation for main section */
 @keyframes fadeIn {
@@ -426,3 +351,96 @@
 }
 
 
+
+/* nav css */
+nav {
+  display: flex;
+  padding: 2% 3%;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+  background-color: #003d63;
+  color: white;
+}
+nav h1 {
+  font-size: 22px;
+  text-decoration: none;
+ 
+}
+
+
+.nav-links {
+  flex: 1;
+  text-align: right;
+}
+
+.nav-links ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 10px 15px;
+  position: relative;
+}
+
+.nav-links ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+}
+.nav-links ul li a:hover {
+  color: red;
+}
+
+
+
+#menu-bar {
+  font-size: 1.5rem;
+  border-radius: 0.5rem;
+  border: 0.5px solid black;
+  padding: 0.5rem 1rem;
+  margin-right: 5px;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 768px) {
+  #menu-bar {
+    display: initial;
+  }
+
+  .nav-links {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: rgb(141, 149, 182);
+    padding: 1rem;
+    display: none;
+    text-align: center;
+  }
+
+  .nav-links.active {
+    display: block;
+    transition: 0.4s linear;
+  }
+
+  .nav-links ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    margin: 0;
+  }
+
+  .nav-links ul li {
+    padding: 12px 12px;
+  }
+
+  .nav-links ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+  }
+}
